--- a/javascripts.html
+++ b/javascripts.html
@@ -23,8 +23,8 @@
   </p>
       <table>
         <tr>
-      <td><h2><a href="https://www.khanacademy.org/computer-programming/walters_dancingbitmojifun/4630863010021376">walters_dancingBitmojiFun</a></h2><script src="https://www.khanacademy.org/computer-programming/walters_dancingbitmojifun/4630863010021376/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
-    <td><h2><a href="https://www.khanacademy.org/computer-programming/walters_racingbitmojifun/6544245145419776">walters_racingBitmojiFun</a></h2><script src="https://www.khanacademy.org/computer-programming/walters_racingbitmojifun/6544245145419776/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+      <td><h2><a href="https://www.khanacademy.org/computer-programming/walters_dancingbitmojifun/4630863010021376">walters_dancingBitmojiFun</a></h2><script width="100" src="https://www.khanacademy.org/computer-programming/walters_dancingbitmojifun/4630863010021376/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+    <td><h2><a href="https://www.khanacademy.org/computer-programming/walters_racingbitmojifun/6544245145419776">walters_racingBitmojiFun</a></h2><script width="100" src="https://www.khanacademy.org/computer-programming/walters_racingbitmojifun/6544245145419776/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
         </tr>
       </table>
         </div>
