--- a/javascripts.html
+++ b/javascripts.html
@@ -27,9 +27,12 @@
     <td><h2><a href="https://www.khanacademy.org/computer-programming/walters_racingbitmojifun/6544245145419776">walters_racingBitmojiFun</a></h2><script width="100" src="https://www.khanacademy.org/computer-programming/walters_racingbitmojifun/6544245145419776/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
         </tr>
         <tr>
-          <td><h2><a href="https://www.khanacademy.org/computer-programming/walters_decision/6728990416388096">walters_decision</a></h2><script src="https://www.khanacademy.org/computer-programming/walters_decision/6728990416388096/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+         <td><h2><a href="https://www.khanacademy.org/computer-programming/walters_decision/6728990416388096">walters_decision</a></h2><script src="https://www.khanacademy.org/computer-programming/walters_decision/6728990416388096/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
         <td><h2><a href="https://www.khanacademy.org/computer-programming/walters_zoo/6653014240083968">walters_zoo</a></h2><script src="https://www.khanacademy.org/computer-programming/walters_zoo/6653014240083968/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p></td>
         </tr>
+        <tr>
+          <td><h2><a href="https://www.khanacademy.org/computer-programming/walters_tag/4842138832420864">walters_tag</a></h2><script src="https://www.khanacademy.org/computer-programming/walters_tag/4842138832420864/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+        <tr>
       </table>
         </div>
   </body>
