--- a/javascripts.html
+++ b/javascripts.html
@@ -34,6 +34,10 @@
           <td><h2><a href="https://www.khanacademy.org/computer-programming/walters_tag/4842138832420864">walters_tag</a></h2><script src="https://www.khanacademy.org/computer-programming/walters_tag/4842138832420864/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
        <td><h2><a href="https://www.khanacademy.org/computer-programming/walters_contacts/6082264141086720">walters_contacts</a></h2><script src="https://www.khanacademy.org/computer-programming/walters_contacts/6082264141086720/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
         </tr>
+        <tr>
+          <td><h2><a href="https://www.khanacademy.org/computer-programming/tictactoe_3_23-with-win-statement-in-println/4627514593853440">TicTacToe_3_23 with win statement in println</a></h2><script src="https://www.khanacademy.org/computer-programming/tictactoe_3_23-with-win-statement-in-println/4627514593853440/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script></td>
+       <td><h2><a href="https://www.khanacademy.org/computer-programming/walters_mole_mash/6255185543249920">Walters_Mole_Mash</a></h2><script src="https://www.khanacademy.org/computer-programming/walters_mole_mash/6255185543249920/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script></td>
+        </tr>
       </table>
         </div>
   </body>
