--- a/FinalProject.html
+++ b/FinalProject.html
@@ -23,10 +23,10 @@
     </table>
   <h1>  Welcome to Derrien's Final Project webpage! </h1>
   <p>   This page contains a Javascript app I made with my partner Neil Macleod in my CSC 106 course at the University of Rhode Island. Our final project we decided on was to build a Sudoku application and what you see below is what it evolved into. We used every aspect of programming we learned over the semester to create this game with 3 different difficulties to try.
-
-How to use the app: 
-
   </p>
+      <h1> How to use the app: </h1>
+      <p>
+      </p>
       <table>
         <tr>
       <td><h2><a href="https://www.khanacademy.org/computer-programming/walters_dancingbitmojifun/4630863010021376">walters_dancingBitmojiFun</a></h2><script width="100" src="https://www.khanacademy.org/computer-programming/walters_dancingbitmojifun/4630863010021376/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
